# wordninja-rs

./: Cargo.toml  LICENSE  README.md  test_lang.txt
.github/workflows/: flow.yml  release.yml
src/: lib.rs  main.rs
