[package]
name = "wordninja"
version = "0.1.0"
authors = ["Harry Cheng <chengyuhui1@gmail.com>"]
description = "A Rust port of the Word Ninja English word splitting library."
edition = "2018"
repository = "https://github.com/chengyuhui/wordninja-rs"
homepage = "https://github.com/chengyuhui/wordninja-rs"
license = "MIT"
categories = ["algorithms", "command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.3"
